--- a/shipper/shipper_config.yaml
+++ b/shipper/shipper_config.yaml
@@ -9,20 +9,28 @@ timesFilePath: "ftptimes.yaml"
 # minutes: 04
 # seconds: 05
 logging:
-  folder: "script_log"
-  filename: "extractor_log_{200601021504}.log"
+  import:
+    folder: "script_log"
+    filename: "import_log_{200601021504}.log"
+  export:
+    folder: "script_log"
+    filename: "export_log_{200601021504}.log"
 
 ftps:
 - name: "test"
   hostname: "127.0.0.1"
-  port: 20
+  port: 21
   username: "ftpuser"
   password: "passwd"
   protocol: "ftp"
 
+# Shipper modes:
+#  import
+#  export
 services:
 - name: "service name"
   ftpConfig: [test]
+  mode: import
   sourceFolder: "asd"
   destinationFolder: "asd"
   filePrefix: "file-"
