--- a/shipper/shipper_config.yaml
+++ b/shipper/shipper_config.yaml
@@ -9,12 +9,8 @@ timesFilePath: "ftptimes.yaml"
 # minutes: 04
 # seconds: 05
 logging:
-  import:
-    folder: "script_log"
-    filename: "import_log_{200601021504}.log"
-  export:
-    folder: "script_log"
-    filename: "export_log_{200601021504}.log"
+  script: "script_log/shipperLogs_{200601021504}.log"
+  files: "script_log/processedFiles_{200601021504}.log"
 
 ftps:
 - name: "test"
