--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-# Ignore all configuations files
-*.yaml
-# Except the following placeholders
-!shipper/shipper_config.yaml
-
-# Shipper test data folder
-ftpdata/
-pulldata/
-upload/
-script_log/
-cleardata/
+## Ignore Local development
+local_devel/*
+# Except the following
+!local_devel/launch-ftp-server.sh
+!local_devel/prep-data.bash
+!local_devel/*_config.yaml
